--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="easy_doc_dk_8_11">
+  <meta name="apple-mobile-web-app-title" content="se7ety_dk_8_11">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>easy_doc_dk_8_11</title>
+  <title>se7ety_dk_8_11</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
